fix: logo position disappearing on small screens in secondary position

--- a/src/pages/LandingPage/landingpage-styles.css
+++ b/src/pages/LandingPage/landingpage-styles.css
@@ -90,7 +90,7 @@
             transition: all ease-out 0.25s;
         }
 
-        margin-top: -1.4rem;
+        margin-top: -1.35rem;
         letter-spacing: 17vw;
         word-wrap: break-word;
         line-height: 9.45rem;
@@ -165,22 +165,21 @@
         min-height: calc(var(--row-height) * 8);
 
         .logo-vertical {
-            margin-top: calc(0);
             letter-spacing: 17vw;
             word-wrap: break-word;
 
             &.position-primary {
-                grid-column: 8;
+                grid-column: 8 / 11;
                 grid-row: 3 / 7;
 
-                margin-left: calc(15.67vw* 0.05);
+                margin-left: -1.667vw;
             }
 
             &.position-secondary {
-                grid-column: 4;
+                grid-column: 4 / 7;
                 grid-row: 4 / 8;
 
-                margin-left: calc(16.67vw * 0.2);
+                margin-left: 1.667vw;
             }
 
             .logo-vertical-type-container {
